@@ -142,6 +142,14 @@ let of_list l =
   List.sort compare (to_list (of_list l)) = l
 *)
 
+let bindings ht = to_list ht
+(*$T bindings
+  let ht = create 1 in \
+  add ht 1 '2'; \
+  bindings ht = [(1, '2')]
+*)
+
+
 let keys h = BatEnum.map (fun (k,_) -> k) (enum h)
 let values h = BatEnum.map (fun (_,v) -> v) (enum h)
 
